tests/NormalTests/paczka1/fuzzy1/62156698.err
Error in line 5: S795 S795 26,8
Error in line 12: spPBrTaMWm S795 138,0
Error in line 25: Ny5IcfAReEg S795 13,7
Error in line 26: Ny5IcfAReEg S337 50,4
Error in line 20: spPBrTaMWm S795 49,5
Error in line 28: spPBrTaMWm S672 45,2
